Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -26,7 +26,9 @@
 }
 
 .projImg{
-  height: 100%;
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
 }
 
 .resumeSec{
